--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 asgiref==3.8.1
+dj-database-url==3.0.1
 Django==5.2.4
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+psycopg2-binary==2.9.10
+PyJWT==2.9.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
-gunicorn
-djangorestframework-simplejwt
-psycopg2-binary
-dj-database-url
