--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
+python-decouple==3.8
+python-dotenv==1.1.1
 sqlparse==0.5.3
 typing_extensions==4.14.0
 gunicorn
